--- a/README_invalid.html
+++ b/README_invalid.html
@@ -1,6 +1,38 @@
+<div style="
+        background-color: rgba(255, 255, 255, 0.3);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-sizing: border-box;
+        padding: 20px;
+        ">
+    <div style="
+        width: calc(100% - 100px);
+        ">
+        <div style="
+        font-family: Copperplate, Copperplate Gothic Light, fantasy;
+        text-align: center;
+        font-size: 30px;
+        ">
+            Hi, this is Ryoooooou speaking!
+        </div>
+        <hr />
+        <div style="
+        font-family: Avant Garde, Avantgarde, Century Gothic, CenturyGothic, AppleGothic, sans-serif;
+        text-align: center;
+        font-size: 20px;
+        ">
+            I'm just a 20 year-old programmer.
+
+            This little github contains my ideas of gaming and my past projects that I've done in school.
+        </div>
+    </div>
+</div>
+
+<!--
 <div class="outerBackground">
     <div class="innerBackground">
-        <div class="chooses">
+        <div class="biggerFonts">
             Hi, this is Ryoooooou speaking!
         </div>
         <hr />
@@ -11,20 +43,16 @@
         </div>
     </div>
 </div>
+-->
 
 <style>
     .outerBackground {
         background-color: rgba(255, 255, 255, 0.3);
         display: flex;
-        /* Use flexbox for centering */
         align-items: center;
-        /* Center vertically */
         justify-content: center;
-        /* Center horizontally */
         box-sizing: border-box;
-        /* Include padding and border in element's total width and height */
         padding: 20px;
-        /* Optional: add padding around the content */
     }
 
     .innerBackground {
@@ -37,7 +65,7 @@
         font-size: 20px;
     }
 
-    .chooses {
+    .biggerFonts {
         font-family: Copperplate, Copperplate Gothic Light, fantasy;
         text-align: center;
         font-size: 30px;
