--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <body style="background: black">
     <div class="outerBackground">
         <div class="innerBackground">
-            <div class="biggerFonts">
+            <div class="font2_30px">
                 Hi, this is Ryoooooou speaking!
             </div>
             <hr />
-            <div class="smallerFont">
+            <div class="font1_20px">
                 I'm just a 20 year-old programmer.
                 <br>
                 This little github contains my ideas of gaming and my past projects that I've done in school.
@@ -18,6 +18,58 @@
         </div>
     </div>
     <br>
+    <div class="sectionTitle">
+        WHAT CAN I DO
+    </div>
+    <br>
+    <div class="outerBackground">
+        <div class="innerBackground">
+            <div class="font1_20px">
+                <b>Java</b>&nbsp;&nbsp;C&nbsp;&nbsp;C++&nbsp;&nbsp;C#&nbsp;&nbsp;Python&nbsp;&nbsp;Verilog&nbsp;&nbsp;SQL&nbsp;&nbsp;R
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="sectionTitle">
+        MY REPOSITORIES
+    </div>
+    <br>
     <div class="containerForButtons">
+        <div class="outerBackground">
+            <div class="innerBackground">
+                <div class="font1_20px">
+                    <b>Loading...</b>
+                </div>
+            </div>
+        </div>
+        <br>
+    </div>
+    <div class="sectionTitle">
+        CONTACT ME
+    </div>
+    <br>
+    <div class="outerBackground">
+        <div class="innerBackground">
+            <div class="containerForContacts">
+                <div class="left">
+                    <div class="font1_20px" style="text-align: right;">
+                        <b>Github</b><br>
+                        <b>Email</b><br>
+                        <b>WeChat</b><br>
+                        <b>QQ</b><br>
+                        <b>Bilibili</b>
+                    </div>
+                </div>
+                <div class="right" style="width: calc(49% + 40px);">
+                    <div class="font1_20px" style="text-align: left;">
+                        RyoooooouGit<br>
+                        SunnyIcelyql@gmail.com<br>
+                        Ryoooooou_H<br>
+                        825545272<br>
+                        洛雨晴凌
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
