--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <script src="src.js"></script>
 </head>
 
-<body style="background: black">
+<body>
+    <div class="backgroundContainer">
+    </div>
     <div class="outerBackground">
         <div class="innerBackground">
             <div class="font2_30px">
@@ -45,8 +47,8 @@
                     </div>
                 </div>
             </div>
-            <br>
         </div>
+        <br>
     </div>
     <div class="sectionTitle">
         CONTACT ME
