--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="outerBackground">
             <div class="innerBackground">
                 <div class="font1_20px">
-                    <b>Java</b>&nbsp;&nbsp;C&nbsp;&nbsp;C++&nbsp;&nbsp;C#&nbsp;&nbsp;Python&nbsp;&nbsp;Verilog&nbsp;&nbsp;SQL&nbsp;&nbsp;R
+                    <b>Java</b>&nbsp;&nbsp;C&nbsp;&nbsp;C++&nbsp;&nbsp;C#&nbsp;&nbsp;JS&Html&CSS&nbsp;&nbsp;Python&nbsp;&nbsp;Verilog&nbsp;&nbsp;SQL&nbsp;&nbsp;R
                 </div>
             </div>
         </div>
