--- a/index.html
+++ b/index.html
@@ -23,57 +23,58 @@
     <div class="sectionTitle">
         WHAT CAN I DO
     </div>
-    <br>
-    <div class="containerForAllSection">
-        <div class="outerBackground">
-            <div class="innerBackground">
-                <div class="font1_20px">
-                    <b>Java</b>&nbsp;&nbsp;C&nbsp;&nbsp;C++&nbsp;&nbsp;C#&nbsp;&nbsp;JS&Html&CSS&nbsp;&nbsp;Python&nbsp;&nbsp;Verilog&nbsp;&nbsp;SQL&nbsp;&nbsp;R
+    <div class="containerForAllSectionOuter">
+        <div class="containerForAllSectionInner">
+            <div class="outerBackground">
+                <div class="innerBackground">
+                    <div class="font1_20px">
+                        <b>Java</b>&nbsp;&nbsp;C&nbsp;&nbsp;C++&nbsp;&nbsp;C#&nbsp;&nbsp;JS&Html&CSS&nbsp;&nbsp;Python&nbsp;&nbsp;Verilog&nbsp;&nbsp;SQL&nbsp;&nbsp;R
+                    </div>
                 </div>
             </div>
         </div>
-        <br>
     </div>
     <div class="sectionTitle">
         MY REPOSITORIES
     </div>
-    <br>
-    <div class="containerForAllSection">
-        <div class="containerForButtons">
-            <div class="outerBackground">
-                <div class="innerBackground">
-                    <div class="font1_20px">
-                        <b>Loading...</b>
+    <div class="containerForAllSectionOuter">
+        <div class="containerForAllSectionInner">
+            <div class="containerForButtons">
+                <div class="outerBackground">
+                    <div class="innerBackground">
+                        <div class="font1_20px">
+                            <b>Loading...</b>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <br>
     </div>
     <div class="sectionTitle">
         CONTACT ME
     </div>
-    <br>
-    <div class="containerForAllSection">
-        <div class="outerBackground">
-            <div class="innerBackground">
-                <div class="containerForContacts">
-                    <div class="left">
-                        <div class="font1_20px" style="text-align: right;">
-                            <b>Github</b><br>
-                            <b>Email</b><br>
-                            <b>WeChat</b><br>
-                            <b>QQ</b><br>
-                            <b>Bilibili</b>
+    <div class="containerForAllSectionOuter">
+        <div class="containerForAllSectionInner">
+            <div class="outerBackground">
+                <div class="innerBackground">
+                    <div class="containerForContacts">
+                        <div class="left">
+                            <div class="font1_20px" style="text-align: right;">
+                                <b>Github</b><br>
+                                <b>Email</b><br>
+                                <b>WeChat</b><br>
+                                <b>QQ</b><br>
+                                <b>Bilibili</b>
+                            </div>
                         </div>
-                    </div>
-                    <div class="right" style="width: calc(49% + 40px);">
-                        <div class="font1_20px" style="text-align: left;">
-                            RyoooooouGit<br>
-                            SunnyIcelyql@gmail.com<br>
-                            Ryoooooou_H<br>
-                            825545272<br>
-                            洛雨晴凌
+                        <div class="right" style="width: calc(49% + 40px);">
+                            <div class="font1_20px" style="text-align: left;">
+                                RyoooooouGit<br>
+                                SunnyIcelyql@gmail.com<br>
+                                Ryoooooou_H<br>
+                                825545272<br>
+                                洛雨晴凌
+                            </div>
                         </div>
                     </div>
                 </div>
